LPS-147977 Reorganize variables

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_DragPreview.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_DragPreview.scss
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: $dragPreviewLayer;
+	z-index: $dragPreviewZIndex;
 
 	&__content {
 		align-items: center;
