--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_Toolbar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_Toolbar.scss
@@ -2,8 +2,7 @@ html#{$cadmin-selector} {
 	.cadmin {
 		.page-editor__toolbar {
 			background-color: $cadmin-white;
-			border-bottom: $toolbarBorderWidth solid
-				fade_out($cadmin-secondary-l2, 0.5);
+			border-bottom: 1px solid fade_out($cadmin-secondary-l2, 0.5);
 			color: $cadmin-secondary;
 			display: flex;
 			margin-bottom: 0;
