--- a/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
+++ b/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
@@ -300,17 +300,25 @@ html#{$cadmin-selector} {
 		padding: 30px 0;
 	}
 
-	.entry-navigation h2 {
-		margin-bottom: 15px;
-		margin-top: 0;
-	}
-
 	.entry-navigation {
 		padding: 60px 0;
 		width: 100%;
 
+		h2 {
+			margin-bottom: 15px;
+			margin-top: 0;
+		}
+
 		.small-image {
 			height: 140px;
+		}
+
+		.widget-mode-card .card-page-item {
+			max-width: 40rem;
+			min-width: 20rem;
+			padding-left: $grid-gutter-width / 2;
+			padding-right: $grid-gutter-width / 2;
+			width: 50%;
 		}
 	}
 
@@ -392,16 +400,6 @@ html#{$cadmin-selector} {
 
 		.autofit-col + .autofit-col {
 			padding-left: 0.5rem;
-		}
-	}
-
-	.widget-mode-card {
-		.card-page-item {
-			max-width: 40rem;
-			min-width: 20rem;
-			padding-left: $grid-gutter-width / 2;
-			padding-right: $grid-gutter-width / 2;
-			width: 50%;
 		}
 	}
 
