LPS-148075 Create Manage Product Users style

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/pages/_team-members.scss
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/pages/_team-members.scss
@@ -14,4 +14,15 @@
 	.inline-item {
 		width: 10px;
 	}
+.cp-manager-product-button {
+	& span {
+		width: 12px;
+		margin-left: 6px;
+		margin-right: 0.25rem;
+	}
+
+	border-color: var(--color-action-neutral-default);
+}
+.cp-manager-product-container {
+	max-width: fit-content;
 }
