--- a/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/variables.scss
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/variables.scss
@@ -58,3 +58,7 @@ $spacer-7: var(--spacer-7, 4rem);
 $spacer-8: var(--spacer-8, 5rem);
 $spacer-9: var(--spacer-8, 6rem);
 $spacer-10: var(--spacer-10, 7rem);
+
+// Sizing
+
+$size-document-preview: 64px;
