LPS-148475 Added Gravatar Image to Team Members Table

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/containers/TeamMembersTable/_team-members-table.scss
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/containers/TeamMembersTable/_team-members-table.scss
@@ -1,9 +1,8 @@
 .cp-team-members-table {
 	.cp-team-members-avatar {
-		min-width: 40px;
-		min-height: 40px;
-		border-radius: 50%;
-		background-color: red;
+		img {
+			border-radius: 50%;
+		}
 	}
 	.table-cell-expand {
 		max-width: 8.5rem !important;
