LPS-148476 Added popover message to team members table

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/containers/TeamMembersTable/_team-members-table.scss
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/containers/TeamMembersTable/_team-members-table.scss
@@ -20,4 +20,17 @@
 
 .cp-team-members-support-seat-icon {
 	color: var(--color-action-primary-active);
+
+	&:hover,
+	&:focus,
+	&:active {
+		color: var(--color-action-primary-hover);
+	}
+}
+
+.cp-team-members-popover {
+	min-width: 350px;
+	a {
+		text-decoration: underline;
+	}
 }
