LPS-147066 search-experiences-web: Fix styling and add to docs

--- a/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_sidebar.scss
+++ b/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_sidebar.scss
@@ -1,4 +1,16 @@
 .sidebar {
+	&.info-sidebar {
+		.container-fluid {
+			padding-left: 24px;
+			padding-right: 24px;
+		}
+
+		.sidebar-header {
+			padding-left: 24px;
+			padding-right: 16px;
+		}
+	}
+
 	.empty-list-message {
 		padding: 16px;
 		text-align: center;
