LPS-147785 Styling form layout

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/styles/containers/setup-forms/layout/_layout.scss
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/styles/containers/setup-forms/layout/_layout.scss
@@ -5,7 +5,12 @@
 	width: 600px;
 }
 
-.generateKey {
-	height: 924px;
+.cp-generateKey {
+	min-height: 836px;
+	max-height: 936px;
 	width: 680px;
+}
+
+.cp-select-card {
+	background-image: none !important;
 }
